package msg;
import "serialize.proto";

// 添加收货地址
message C2GW_AddDeliveryAddress {
    optional msg.UserAddress info = 1;
}

// 删除地址
message C2GW_DelDeliveryAddress {
    optional uint32 index = 1;
}

// 修改地址
message C2GW_ChangeDeliveryAddress {
    optional uint32 index = 1;
    optional msg.UserAddress info = 2;
}

// 同步地址列表
message GW2C_SendDeliveryAddressList {
    repeated msg.UserAddress list = 1;
}

// 请求充值页面
message C2GW_ReqRechargeMoney {
    optional uint32 amount = 1;
    optional string token = 2;
    optional uint32 type = 3;
}

// 返回充值请求
message GW2C_RetRechargeMoney {
    optional string urlcheckout = 1;
}


